--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,8 @@
     box-sizing: border-box;
 }
 
+/* General Styles */
+
 html {
     font-size: 10px;
     font-family: 'League Spartan', sans-serif;
@@ -10,6 +12,7 @@ html {
 body {
     font-size: 1.6rem;
     margin: 0;
+    text-align: center;
 }
 
 header,
@@ -18,6 +21,58 @@ footer,
     background-color: hsl(0, 0%, 7%);
     color: hsl(0, 0%, 100%);
 }
+
+/* Typography */
+h1 {
+    font-weight: 300;
+    font-size: 3.2rem;
+    padding: 0 1em;
+}
+
+h2,
+.event-type h3,
+.make-reservation h3 {
+    font-size: 3.2rem;
+}
+
+h3 {
+    font-size: 2rem;
+}
+
+h2,
+h3 {
+    font-weight: 700;
+}
+
+p {
+    font-weight: 400;
+    line-height: 26px;
+}
+
+/* Images */
+header img {
+    display: block;
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+}
+
+.logo img {
+    height: 32px;
+}
+
+/* Header */
+.header-content,
+.reservations {
+    padding: 0 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
 
 .make-reservation {
     background-image: url(./images/homepage/ready-bg-mobile.jpg);
@@ -29,9 +84,28 @@ footer,
     display: none;
 }
 
+/* buttons */
+.button {
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 1.7rem;
+    width: 245px;
+    padding: 1.4em 2em 1.2em 2em;
+    border: 1px solid hsl(0, 0%, 100%);
+    display: block;
+    color: hsl(0, 0%, 100%);
+    letter-spacing: 3px;
+    text-transform: uppercase;
+}
+
 /* Booking page */
 .reservations {
     background-image: url(./images/booking/hero-bg-mobile.jpg);
     background-repeat: no-repeat;
     /* background-size: ; */
+}
+
+/* Footer */
+footer .logo img {
+    height: 40px;
 }
